<resources>
    <string name="app_name">QR Scan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup">Signup</string>
    <string name="payments">Payments</string>
    <string name="my_recents">My Recents</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="user">User</string>
    <string name="complete_your_profile">Complete your Profile</string>

    <string name="drawer_open_content_desc">Drawer Open</string>
    <string name="drawer_close_content_desc">Drawer Close</string>
</resources>
