<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_payment"
        android:title="@string/payments"
        android:icon="@drawable/ic_payments_blue_24"/>

    <item
        android:id="@+id/action_my_recents"
        android:title="@string/my_recents"
        android:icon="@drawable/ic_recent_blue_24"/>

    <item
        android:id="@+id/action_invite_friends"
        android:title="@string/invite_friends"
        android:icon="@drawable/ic_friends_blue_24"/>

    <item
        android:id="@+id/action_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications_blue_24"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_blue_24"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_blue_24"/>
</menu>