<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="top|start"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/settings_grey_96" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/txt_title"
                android:text="@string/signup"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="start|bottom"
                android:gravity="bottom"
                android:paddingBottom="16dp"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_name"
        android:layout_width="300dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:background="@drawable/et_background"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textCursorDrawable="@color/grey_500"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_name_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:src="@drawable/cross_grey_24"
        android:background="@android:color/transparent"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/wrapper_name"
        app:layout_constraintEnd_toEndOf="@+id/wrapper_name"
        app:layout_constraintTop_toTopOf="@+id/wrapper_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_phone_number"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintEnabled="false"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:background="@drawable/et_background"
            android:drawableEnd="@drawable/cross_grey_24"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textCursorDrawable="@color/grey_500"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_number_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:src="@drawable/cross_grey_24"
        android:background="@android:color/transparent"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/wrapper_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/wrapper_phone_number"
        app:layout_constraintTop_toTopOf="@+id/wrapper_phone_number" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_600"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>